# Legal-Edge

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
_client/: CMakeLists.txt  Endpoints.hpp  LegalEdgeClient.cpp  LegalEdgeClient.hpp  dataTypes.hpp  main.cpp
_client/FilesReader/: Reader.cpp  Reader.hpp
_client/Ui/: MainWindow.cpp  MainWindow.hpp  MenuBar.cpp  MenuBar.hpp  Style.hpp  UiManager.cpp  UiManager.hpp
_client/Ui/Widgets/: CaseManagment.cpp  CaseManagment.hpp  Helper.cpp  Helper.hpp  Plans.cpp  Plans.hpp  Style.hpp
_client/Ui/Widgets/SubWidgets/: ActualCases.cpp  ActualCases.hpp  AddEvent.cpp  AddEvent.hpp  BooksOfLaws.cpp  BooksOfLaws.hpp  CreateCase.cpp  CreateCase.hpp  InputAreaComp.cpp  InputAreaComp.hpp  ManageCases.cpp  ManageCases.hpp  MyCases.cpp  MyCases.hpp  NewEvent.cpp  NewEvent.hpp  Notation.cpp  Notation.hpp  PdfReader.cpp  PdfReader.hpp  SavedCases.cpp  SavedCases.hpp  SearchFieldComp.cpp  SearchFieldComp.hpp  WatchCases.cpp  WatchCases.hpp
_client/network/: ApiManager.cpp  ApiManager.hpp  IDataSerializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp  NetworkService.cpp  NetworkService.hpp
_client/style/: style.css
_server/: CMakeLists.txt  Endpoints.hpp  Server.cpp  Server.hpp  dataTypes.hpp  main.cpp
_server/Business/: BusienessLogic.cpp  BusienessLogic.hpp  CustomerModule.cpp  CustomerModule.hpp  IBusienessModule.hpp  NotesModule.cpp  NotesModule.hpp  UserModule.cpp  UserModule.hpp
_server/Database/: CaseRepository.cpp  CaseRepository.hpp  CustomerRepository.cpp  CustomerRepository.hpp  DatabaseManager.cpp  DatabaseManager.hpp  IRepository.hpp  NotesRepository.cpp  NotesRepository.hpp  RepositoryManager.cpp  RepositoryManager.hpp  UserRepository.cpp  UserRepository.hpp  db_configure.sql
_server/Database/Entities/: IEntity.hpp
_server/network/: HttpServer.cpp  HttpServer.hpp  HttpTransaction.cpp  HttpTransaction.hpp  IDataSerializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp  ThreadPool.cpp  ThreadPool.hpp
